# centralized-file-server-cli

./: Cargo.toml
src/: main.rs
