[package]
name = "centralized-file-server-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
paw = "1.0"
structopt = {version = "0.3.21", features = ["paw"]}
serde = {version = "1.0", features = ["derive"]}
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"